# 100-exercises-to-learn-rust

./: Cargo.toml
GPT_exercises/gpt_exercises_01/: Cargo.toml
GPT_exercises/gpt_exercises_01/src/: main.rs
exercises/02_basic_calculator/03_if_else/src/: lib.rs
exercises/02_basic_calculator/06_while/src/: lib.rs
exercises/02_basic_calculator/07_for/: Cargo.toml
exercises/02_basic_calculator/07_for/src/: lib.rs
exercises/03_ticket_v1/01_struct/src/: lib.rs
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
exercises/04_traits/01_trait/src/: lib.rs
rust_by_practice/variable_examples/: Cargo.toml
rust_by_practice/variable_examples/src/: binding_and_mutability.rs  lib.rs  main.rs
