[workspace]
members = ["rust_by_practice/basic_types", "rust_by_practice/variable_examples",
  "exercises/*/*",
  "helpers/common",
  "helpers/mdbook-exercise-linker",
  "helpers/mdbook-link-shortener",
  "helpers/ticket_fields", "GPT_exercises/gpt_exercises_01",
]
resolver = "2"

# This is needed to guarantee the expected behaviour on that specific exercise,
# regardless of the "global" setting for `overflow-checks` on the `dev` profile.
[profile.dev.package.copy]
overflow-checks = false

[profile.dev]
overflow-checks = false